src/components/navbar/navbar.styles.scss
@import url('https://fonts.googleapis.com/css?family=Roboto:700,900');

.navbar {
    position: fixed;
    width: 100%;
    height: 4rem;
    background: linear-gradient(to top, rgba(18, 18, 17, 0), rgba(18, 18, 17, 1));
    transition-property: background-color;
    transition-duration: 0.5s;
    padding: 0 3rem;
    z-index: 10;

    .navbar__content {
        display: flex;
        justify-content: space-between;
        align-items: center;
        height: 100%;

        .navbar__left {
            display: flex;
            height: 100%;
    
            .navbar__title{
                margin: auto 0;
                color: #e50914;

                &:hover {
                    cursor: pointer;
                }
            }
    
            .navbar__browse {
                color: white;
                display: flex;
                align-items: center;
                justify-content: center;
                margin-left: 2rem;

                &:hover {
                    cursor: pointer;
                }
    
                h4 {
                    margin-right: .5rem;
                }
    
                .fas.fa-sort-down {
                    font-size: 2rem;
                    margin-bottom: 1rem;
                }
            }
    
            .navbar__tabs {
                display: flex;
                justify-content: space-between;
                align-items: center;
                color: #e5e5e5;
                margin-left: 2rem;
                
            }
        }

        .navbar__right {
            height: 100%;
            display: flex;
            justify-content: center;
            align-items: center;

            .fas.fa-bell {
                color: white;
                font-size: 1.5rem;
                padding: 1rem 2rem;
                
                &:hover {
                    cursor: pointer;
                }
            }

            .navbar__account {
                padding: 0 1rem;
                .navbar__account__portrait {
                    height: 3rem;
                    width: 3rem;
                    border-radius: .5rem;

                    &:hover {
                        cursor: pointer;
                    }
                }
            }
        }
    }


}

